--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,17 @@
   <link href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap" rel="stylesheet" />
   <style>
     #main-menu {
-      background: url('./assets/main-menu-bg.png') center center/cover no-repeat;
+      background: rgba(10, 20, 30, 0.25); /* Transparent dark overlay */
       min-height: 100vh;
       min-width: 100vw;
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 10;
+      z-index: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      backdrop-filter: blur(2px);
     }
     .menu-title {
       color: #FFD700;
@@ -50,7 +51,7 @@
     <button id="character-select-btn" class="menu-button">Character Select</button>
   </div>
 
-  <div id="character-select-panel" class="main-menu" style="display: none;">
+  <div id="character-select-panel" class="character-select-background" style="display: none;">
     <h1 class="menu-title">CHARACTER SELECTION</h1>
     <div id="character-grid" class="character-grid">
       <!-- Character boxes will be dynamically added here by JavaScript -->
