--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,16 @@
   <link href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap" rel="stylesheet" />
   <style>
     #main-menu {
-      background: rgba(10, 20, 30, 0.25); /* Transparent dark overlay */
+      background: url('./assets/main-menu-bg.png') center center/cover no-repeat;
       min-height: 100vh;
       min-width: 100vw;
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 1;
+      z-index: 10;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      backdrop-filter: blur(2px);
     }
     .menu-title {
       color: #FFD700;
@@ -42,6 +41,45 @@
       background: rgba(255,0,255,0.2);
       box-shadow: 0 0 48px #FFD700, 0 0 96px #00FFFF;
     }
+    .character-select-content {
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+      width: 100%;
+    }
+    .character-info-box {
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 16px;
+      padding: 24px;
+      margin-right: 32px;
+      flex: 1;
+      color: #FFD700;
+      box-shadow: 0 0 24px #FF00FF, 0 0 48px #00FFFF;
+    }
+    .character-grid-and-buttons {
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+    .character-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 16px;
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 16px;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 16px;
+      margin-bottom: 16px;
+      color: #FFD700;
+      box-shadow: 0 0 24px #FF00FF, 0 0 48px #00FFFF;
+    }
+    .character-select-actions {
+      display: flex;
+      justify-content: space-between;
+      margin-top: auto;
+    }
   </style>
 </head>
 <body>
@@ -51,20 +89,29 @@
     <button id="character-select-btn" class="menu-button">Character Select</button>
   </div>
 
-  <div id="character-select-panel" class="character-select-background" style="display: none;">
-    <h1 class="menu-title">CHARACTER SELECTION</h1>
-    <div id="character-grid" class="character-grid">
-      <!-- Character boxes will be dynamically added here by JavaScript -->
+  <div id="character-select-panel" class="character-select-panel" style="display: none;">
+    <canvas id="character-select-canvas" class="background-canvas"></canvas>
+    <div class="character-select-content">
+      <div id="character-info-box" class="character-info-box">
+        <h2 id="detail-name" class="neon-text-cyan"></h2>
+        <p id="detail-description"></p>
+        <p>HP: <span id="detail-hp"></span></p>
+        <p>Speed: <span id="detail-speed"></span></p>
+        <p>Damage: <span id="detail-damage"></span></p>
+        <img id="character-portrait-preview" class="character-portrait" src="" alt="Character Portrait">
+        <p class="weapon">Weapon: <span id="detail-weapon"></span></p>
+      </div>
+      <div class="character-grid-and-buttons">
+        <h1 class="menu-title">CHARACTER SELECTION</h1>
+        <div id="character-grid" class="character-grid">
+          <!-- Character boxes will be dynamically added here by JavaScript -->
+        </div>
+        <div class="character-select-actions">
+          <button id="select-character-btn" class="menu-button">Select Character</button>
+          <button id="back-to-main-btn" class="menu-button">Back to Main Menu</button>
+        </div>
+      </div>
     </div>
-    <div id="character-details" class="character-details">
-      <h2 id="detail-name" class="neon-text-cyan"></h2>
-      <p id="detail-description"></p>
-      <p>HP: <span id="detail-hp"></span></p>
-      <p>Speed: <span id="detail-speed"></span></p>
-      <p>Damage: <span id="detail-damage"></span></p>
-    </div>
-    <button id="select-character-btn" class="menu-button">Select Character</button>
-    <button id="back-to-main-btn" class="menu-button">Back to Main Menu</button>
   </div>
 
   <canvas id="gameCanvas"></canvas>
