--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <!-- WHAT: Content Security Policy baseline.
+    WHY: Mitigates XSS by restricting sources. In dev we need 'unsafe-eval' for Vite; removed in prod build.
+    NOTE: Google Fonts kept temporarily; plan: self-host font to drop external origins. -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; media-src 'self'; connect-src 'self' ws://localhost:5173 http://localhost:5173; frame-ancestors 'none';">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cyber Survivor</title>
   <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
