--- a/index.html
+++ b/index.html
@@ -2,34 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- WHAT: Content Security Policy baseline (root entry used in packaged app maybe). -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; media-src 'self'; frame-ancestors 'none';">
+    <!-- WHAT: CSP tightened (removed 'unsafe-inline'). All styles now external in cyberpunk-styles.css. -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; media-src 'self'; frame-ancestors 'none';">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CyberSurvivor</title>
     <link rel="icon" type="image/svg+xml" href="/public/favicon.svg">
     <link rel="stylesheet" href="./src/assets/cyberpunk-styles.css">
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            /* background-color: #1a1a2e;  Remove to allow canvas to show */
-        }
-        canvas {
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0; /* Ensure canvas is behind HTML UI elements */
-        }
-        #main-menu {
-            z-index: 1; /* Main menu above canvas */
-        }
-        /* The upgrade panel container will be appended to body by UpgradePanel.ts */
-    </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-        <div id="loading-overlay" class="loading-overlay">
+    <div id="loading-overlay" class="loading-overlay">
             <div class="loading-title">CYBER SURVIVOR</div>
             <div id="loading-status" class="loading-status">Initializing...</div>
             <div class="loading-bar-shell">
@@ -37,16 +19,6 @@
             </div>
             <div id="loading-tip" class="loading-tip">Loading assets...</div>
         </div>
-    <style>
-      /* WHAT: Styles extracted from inline attributes to satisfy CSP (no inline style attributes needed).
-         WHY: Reduces reliance on 'unsafe-inline' over time (can later hash/nonce or move to external CSS). */
-      .loading-overlay { position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; background:#050510; z-index:1000; font-family:'Orbitron',sans-serif; color:#0ff; letter-spacing:1px; }
-      .loading-title { font-size:38px; margin-bottom:18px; text-shadow:0 0 12px #00ffff,0 0 24px #0088ff; }
-      .loading-status { font-size:14px; margin-bottom:12px; opacity:0.85; }
-      .loading-bar-shell { width:380px; max-width:80%; height:14px; border:2px solid #0ff; box-shadow:0 0 10px #0ff inset,0 0 10px #0ff; position:relative; border-radius:8px; overflow:hidden; }
-      .loading-bar-fill { position:absolute; left:0; top:0; height:100%; width:0; background:linear-gradient(90deg,#00ffff,#00aaff,#00ffff); box-shadow:0 0 12px #00ffff; transition:width .18s ease-out; }
-      .loading-tip { margin-top:14px; font-size:11px; color:#7dd; opacity:0.7; }
-    </style>
     <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
