--- a/src/index.html
+++ b/src/index.html
@@ -2,29 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- WHAT: Content Security Policy baseline.
-    WHY: Mitigates XSS by restricting sources. In dev we need 'unsafe-eval' for Vite; removed in prod build.
-    NOTE: Google Fonts kept temporarily; plan: self-host font to drop external origins. -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; media-src 'self'; connect-src 'self' ws://localhost:5173 http://localhost:5173; frame-ancestors 'none';">
+  <!-- CSP dev: keep 'unsafe-eval' for Vite HMR, drop 'unsafe-inline' after moving inline styles to CSS. -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; media-src 'self'; connect-src 'self' ws://localhost:5173 http://localhost:5173; frame-ancestors 'none';">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cyber Survivor</title>
   <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
   <link rel="stylesheet" href="./assets/cyberpunk-styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: 'Orbitron', monospace;
-    }
-    canvas {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 0;
-    }
-  </style>
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
