feat(security): self-host font placeholder, GPU flags dev-only aggressive, CSP font host removal, preload API meta

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Cyber Survivor</title>
   <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
   <link rel="stylesheet" href="./assets/cyberpunk-styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=Orbitron:700&display=swap" rel="stylesheet" />
+  <!-- Google Fonts removed; using self-hosted font-face (placeholder). -->
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
