--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- CSP dev: keep 'unsafe-eval' for Vite HMR, drop 'unsafe-inline' after moving inline styles to CSS. -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; media-src 'self'; connect-src 'self' ws://localhost:5173 http://localhost:5173; frame-ancestors 'none';">
+  <!-- CSP dev: attempt without 'unsafe-eval'; if HMR breaks, reintroduce conditionally. -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; font-src 'self'; img-src 'self' data:; media-src 'self'; connect-src 'self' ws://localhost:5173 http://localhost:5173; frame-ancestors 'none';">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cyber Survivor</title>
   <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
