--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <title>Cyber Survivor</title>
   <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
   <link rel="stylesheet" href="./assets/cyberpunk-styles.css" />
+  <!-- Optional: Preload Orbitron variable font -->
+  <link rel="preload" href="/assets/fonts/Orbitron-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin>
   <!-- Google Fonts removed; using self-hosted font-face (placeholder). -->
 </head>
 <body>
