--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <!-- CSP dev: attempt without 'unsafe-eval'; if HMR breaks, reintroduce conditionally. -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; font-src 'self'; img-src 'self' data:; media-src 'self'; connect-src 'self' ws://localhost:5173 http://localhost:5173; frame-ancestors 'none';">
+  <!-- CSP: dev-friendly (HMR ws + self assets). frame-ancestors enforced via server header, not meta. -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://lh3.googleusercontent.com; media-src 'self'; connect-src 'self' https://accounts.google.com https://oauth2.googleapis.com https://www.googleapis.com ws://localhost:5173 http://localhost:5173; frame-src 'self' https://accounts.google.com; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Fallback injection of Google Client ID (dev index). Needed so dev server has same meta as production root index -->
+  <meta name="google-client-id" content="156752381672-vidmkis66cs201c39ps9vac3230bv6rl.apps.googleusercontent.com">
   <title>Cyber Survivor</title>
   <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
   <link rel="stylesheet" href="./assets/cyberpunk-styles.css" />
-  <!-- Optional: Preload Orbitron variable font -->
-  <link rel="preload" href="/assets/fonts/Orbitron-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- Removed woff2 preload (no corresponding file); relying on TTF @font-face with swap. -->
   <!-- Google Fonts removed; using self-hosted font-face (placeholder). -->
 </head>
 <body>
